--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "npm install && cd client && npm install && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js --ignore client"
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
